tests/cases/should_fail/goodbye_world/case.stderr
error: unclosed string literal
 --> $DIR/case.hash:1:8
1 |   print("goodbye world...
  |          ^^^^^^^^^^^^^^^^^ here
